@@ -1,5 +1,5 @@
 /*
- * Copyright 2020 Netflix, Inc.
+ * Copyright 2022 Netflix, Inc.
  * <p>
  * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
  * the License. You may obtain a copy of the License at
@@ -12,20 +12,23 @@
  */
 package com.netflix.conductor.core.execution.mapper;
 
-import com.netflix.conductor.common.metadata.tasks.Task;
-import com.netflix.conductor.common.metadata.tasks.TaskDef;
-import com.netflix.conductor.common.metadata.workflow.WorkflowTask;
-import com.netflix.conductor.common.run.Workflow;
-import com.netflix.conductor.core.execution.ParametersUtils;
-import com.netflix.conductor.dao.MetadataDAO;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.stereotype.Component;
+
+import com.netflix.conductor.common.metadata.tasks.TaskDef;
+import com.netflix.conductor.common.metadata.tasks.TaskType;
+import com.netflix.conductor.common.metadata.workflow.WorkflowTask;
+import com.netflix.conductor.core.utils.ParametersUtils;
+import com.netflix.conductor.dao.MetadataDAO;
+import com.netflix.conductor.model.TaskModel;
+import com.netflix.conductor.model.WorkflowModel;
+
+@Component
 public class JsonJQTransformTaskMapper implements TaskMapper {
 
     public static final Logger LOGGER = LoggerFactory.getLogger(JsonJQTransformTaskMapper.class);
@@ -38,36 +41,32 @@ public class JsonJQTransformTaskMapper implements TaskMapper {
     }
 
     @Override
-    public List<Task> getMappedTasks(TaskMapperContext taskMapperContext) {
+    public TaskType getTaskType() {
+        return TaskType.JSON_JQ_TRANSFORM;
+    }
+
+    @Override
+    public List<TaskModel> getMappedTasks(TaskMapperContext taskMapperContext) {
 
         LOGGER.debug("TaskMapperContext {} in JsonJQTransformTaskMapper", taskMapperContext);
 
-        WorkflowTask taskToSchedule = taskMapperContext.getTaskToSchedule();
-        Workflow workflowInstance = taskMapperContext.getWorkflowInstance();
+        WorkflowTask workflowTask = taskMapperContext.getWorkflowTask();
+        WorkflowModel workflowModel = taskMapperContext.getWorkflowModel();
         String taskId = taskMapperContext.getTaskId();
 
-        TaskDef taskDefinition = Optional.ofNullable(taskMapperContext.getTaskDefinition())
-                .orElseGet(() -> Optional.ofNullable(metadataDAO.getTaskDef(taskToSchedule.getName()))
-                        .orElse(null));
+        TaskDef taskDefinition =
+                Optional.ofNullable(taskMapperContext.getTaskDefinition())
+                        .orElseGet(() -> metadataDAO.getTaskDef(workflowTask.getName()));
 
-        Map<String, Object> taskInput = parametersUtils
-                .getTaskInputV2(taskToSchedule.getInputParameters(), workflowInstance, taskId, taskDefinition);
+        Map<String, Object> taskInput =
+                parametersUtils.getTaskInputV2(
+                        workflowTask.getInputParameters(), workflowModel, taskId, taskDefinition);
 
-        Task jsonJQTransformTask = new Task();
-        jsonJQTransformTask.setTaskType(taskToSchedule.getType());
-        jsonJQTransformTask.setTaskDefName(taskToSchedule.getName());
-        jsonJQTransformTask.setReferenceTaskName(taskToSchedule.getTaskReferenceName());
-        jsonJQTransformTask.setWorkflowInstanceId(workflowInstance.getWorkflowId());
-        jsonJQTransformTask.setWorkflowType(workflowInstance.getWorkflowName());
-        jsonJQTransformTask.setCorrelationId(workflowInstance.getCorrelationId());
+        TaskModel jsonJQTransformTask = taskMapperContext.createTaskModel();
         jsonJQTransformTask.setStartTime(System.currentTimeMillis());
-        jsonJQTransformTask.setScheduledTime(System.currentTimeMillis());
         jsonJQTransformTask.setInputData(taskInput);
-        jsonJQTransformTask.setTaskId(taskId);
-        jsonJQTransformTask.setStatus(Task.Status.IN_PROGRESS);
-        jsonJQTransformTask.setWorkflowTask(taskToSchedule);
-        jsonJQTransformTask.setWorkflowPriority(workflowInstance.getPriority());
+        jsonJQTransformTask.setStatus(TaskModel.Status.IN_PROGRESS);
 
-        return Collections.singletonList(jsonJQTransformTask);
+        return List.of(jsonJQTransformTask);
     }
 }
