@@ -1,5 +1,5 @@
 /*
- * Copyright 2020 Netflix, Inc.
+ * Copyright 2022 Netflix, Inc.
  * <p>
  * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
  * the License. You may obtain a copy of the License at
@@ -12,23 +12,30 @@
  */
 package com.netflix.conductor.core.execution.mapper;
 
-import com.netflix.conductor.common.metadata.tasks.Task;
-import com.netflix.conductor.common.metadata.tasks.TaskDef;
-import com.netflix.conductor.common.metadata.workflow.WorkflowTask;
-import com.netflix.conductor.common.run.Workflow;
-import com.netflix.conductor.core.execution.ParametersUtils;
-import com.netflix.conductor.core.execution.tasks.Lambda;
-import com.netflix.conductor.dao.MetadataDAO;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.stereotype.Component;
+
+import com.netflix.conductor.common.metadata.tasks.TaskDef;
+import com.netflix.conductor.common.metadata.tasks.TaskType;
+import com.netflix.conductor.common.metadata.workflow.WorkflowTask;
+import com.netflix.conductor.core.utils.ParametersUtils;
+import com.netflix.conductor.dao.MetadataDAO;
+import com.netflix.conductor.model.TaskModel;
+import com.netflix.conductor.model.WorkflowModel;
 
 /**
  * @author x-ultra
+ * @deprecated {@link com.netflix.conductor.core.execution.tasks.Lambda} is also deprecated. Use
+ *     {@link com.netflix.conductor.core.execution.tasks.Inline} and so ${@link InlineTaskMapper}
+ *     will be used as a result.
  */
+@Deprecated
+@Component
 public class LambdaTaskMapper implements TaskMapper {
 
     public static final Logger LOGGER = LoggerFactory.getLogger(LambdaTaskMapper.class);
@@ -41,36 +48,36 @@ public class LambdaTaskMapper implements TaskMapper {
     }
 
     @Override
-    public List<Task> getMappedTasks(TaskMapperContext taskMapperContext) {
+    public TaskType getTaskType() {
+        return TaskType.LAMBDA;
+    }
+
+    @Override
+    public List<TaskModel> getMappedTasks(TaskMapperContext taskMapperContext) {
 
         LOGGER.debug("TaskMapperContext {} in LambdaTaskMapper", taskMapperContext);
 
-        WorkflowTask taskToSchedule = taskMapperContext.getTaskToSchedule();
-        Workflow workflowInstance = taskMapperContext.getWorkflowInstance();
+        WorkflowTask workflowTask = taskMapperContext.getWorkflowTask();
+        WorkflowModel workflowModel = taskMapperContext.getWorkflowModel();
         String taskId = taskMapperContext.getTaskId();
 
-        TaskDef taskDefinition = Optional.ofNullable(taskMapperContext.getTaskDefinition())
-                .orElseGet(() -> Optional.ofNullable(metadataDAO.getTaskDef(taskToSchedule.getName()))
-                        .orElse(null));
+        TaskDef taskDefinition =
+                Optional.ofNullable(taskMapperContext.getTaskDefinition())
+                        .orElseGet(() -> metadataDAO.getTaskDef(workflowTask.getName()));
 
-        Map<String, Object> taskInput = parametersUtils
-                .getTaskInputV2(taskMapperContext.getTaskToSchedule().getInputParameters(), workflowInstance, taskId, taskDefinition);
+        Map<String, Object> taskInput =
+                parametersUtils.getTaskInputV2(
+                        taskMapperContext.getWorkflowTask().getInputParameters(),
+                        workflowModel,
+                        taskId,
+                        taskDefinition);
 
-        Task lambdaTask = new Task();
-        lambdaTask.setTaskType(Lambda.TASK_NAME);
-        lambdaTask.setTaskDefName(taskMapperContext.getTaskToSchedule().getName());
-        lambdaTask.setReferenceTaskName(taskMapperContext.getTaskToSchedule().getTaskReferenceName());
-        lambdaTask.setWorkflowInstanceId(workflowInstance.getWorkflowId());
-        lambdaTask.setWorkflowType(workflowInstance.getWorkflowName());
-        lambdaTask.setCorrelationId(workflowInstance.getCorrelationId());
+        TaskModel lambdaTask = taskMapperContext.createTaskModel();
+        lambdaTask.setTaskType(TaskType.TASK_TYPE_LAMBDA);
         lambdaTask.setStartTime(System.currentTimeMillis());
-        lambdaTask.setScheduledTime(System.currentTimeMillis());
         lambdaTask.setInputData(taskInput);
-        lambdaTask.setTaskId(taskId);
-        lambdaTask.setStatus(Task.Status.IN_PROGRESS);
-        lambdaTask.setWorkflowTask(taskToSchedule);
-        lambdaTask.setWorkflowPriority(workflowInstance.getPriority());
+        lambdaTask.setStatus(TaskModel.Status.IN_PROGRESS);
 
-        return Collections.singletonList(lambdaTask);
+        return List.of(lambdaTask);
     }
 }
